--- a/views/layout.pug
+++ b/views/layout.pug
@@ -9,6 +9,7 @@ head
   link(href='https://maxcdn.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css' rel='stylesheet')
   script(src='https://code.jquery.com/jquery-3.3.1.min.js')
   link(href='https://fonts.googleapis.com/css2?family=Major+Mono+Display&display=swap' rel='stylesheet')
+  link(href="https://fonts.googleapis.com/css2?family=Roboto:wght@900&display=swap" rel="stylesheet")
   script(src='https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js')
   script(src='https://maxcdn.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js')
   script(src='https://d3js.org/d3.v4.min.js')
