--- a/views/layout.pug
+++ b/views/layout.pug
@@ -22,10 +22,12 @@ body
         li.nav-item
           a.nav-link(href="/") HOME
         li.nav-item
-          a.nav-link(href="/") ABOUT
+          a.nav-link(href="/about") ABOUT
         li.nav-item  
           a.nav-link(href="/") PROJECTS
         li.nav-item  
-          a.nav-link(href="/") CONTACT
-  | !{background}
+          a.nav-link(href="/contact") CONTACT
+    svg      
+      circle(cx='60px' cy='100px' r='25px')
+      rect(x='120px' y='75px' height='50px' width='50px')
   block main
