--- a/views/layout.pug
+++ b/views/layout.pug
@@ -31,3 +31,5 @@ body
       circle(cx='60px' cy='100px' r='25px')
       rect(x='120px' y='75px' height='50px' width='50px')
   block main
+  footer
+    small.text-muted &copy; Copyright 2020, Kareem Abuzaid
