--- a/stylesheets/styles.css
+++ b/stylesheets/styles.css
@@ -19,7 +19,6 @@ svg {
     position:absolute;
     top:0;
     left:0;
-    z-index:0;
 }
 
 .black {
@@ -35,7 +34,6 @@ ol li {
     position: absolute;
     width: 300px;
     height: 200px;
-    z-index: 1;
     top: 50%;
     left: 50%;
     text-align: center;
@@ -51,4 +49,9 @@ ol li {
     margin-top: 20vh;
     margin-left: 4vw;
     width: 40vw;
+}
+
+footer {
+    position: absolute;
+    bottom: 0;
 }
