--- a/views/layout.pug
+++ b/views/layout.pug
@@ -4,7 +4,7 @@ head
     include ../stylesheets/styles.css
   // Required meta tags
   meta(charset='utf-8')
-  meta(name='viewpoint' content='width=device-width, initial-scale=1, shrink-to-fit=no')
+  meta(name='viewpoint' content='width=device-width, initial-scale=1')
   // bootstrap
   link(href='https://maxcdn.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css' rel='stylesheet')
   script(src='https://code.jquery.com/jquery-3.3.1.min.js')
