--- a/stylesheets/styles.css
+++ b/stylesheets/styles.css
@@ -48,9 +48,14 @@ ol li {
     font-family: 'Roboto', sans-serif;
     margin-top: 20vh;
     margin-left: 4vw;
-    width: 40vw;
+    font-size: 16px;
 }
-
+ 
+  @media only screen and (min-width: 600px) {  
+    .content {
+        font-size: 20px;
+    }
+}
 footer {
     position: absolute;
     bottom: 0;
