--- a/views/layout.pug
+++ b/views/layout.pug
@@ -4,8 +4,9 @@ head
     include ../stylesheets/styles.css
   // Required meta tags
   meta(charset='utf-8')
-  meta(name='viewpoint' content='width=device-width, initial-scale=1')
+  meta(name='viewport' content='width=device-width, initial-scale=1')
   // bootstrap
+  link(href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" rel='stylesheet')
   link(href='https://maxcdn.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css' rel='stylesheet')
   script(src='https://code.jquery.com/jquery-3.3.1.min.js')
   link(href='https://fonts.googleapis.com/css2?family=Major+Mono+Display&display=swap' rel='stylesheet')
@@ -16,20 +17,21 @@ head
   
   title Kareem: #{title}
 body
-  nav.navbar.navbar-expand-md
-    div.collapse.navbar-collapse.navbar
-      ol.navbar-nav.mr-auto.mt-2
+  nav.navbar.navbar-expand-lg
+    button.navbar-toggler(data-toggle='collapse' data-target='#navbar-menu')
+      span.navbar-toggler-icon
+        i.fa.fa-navicon
+    div.collapse.navbar-collapse(id='navbar-menu')
+      ol.navbar-nav
         li.nav-item
-          a.nav-link(href="/") HOME
+          a.nav-link(href='/') HOME
         li.nav-item
-          a.nav-link(href="/about") ABOUT
-        li.nav-item  
-          a.nav-link(href="/") PROJECTS
-        li.nav-item  
-          a.nav-link(href="/contact") CONTACT
-    svg      
-      circle(cx='60px' cy='100px' r='25px')
-      rect(x='120px' y='75px' height='50px' width='50px')
+          a.nav-link(href='/about') ABOUT
+        li.nav-item
+          a.nav-link(href='/') PROJECTS
+        li.nav-item
+          a.nav-link(href='/contact') CONTACT
+  svg      
+    circle(cx='60px' cy='100px' r='25px')
+    rect(x='120px' y='75px' height='50px' width='50px')
   block main
-  footer
-    small.text-muted &copy; Copyright 2020, Kareem Abuzaid
