--- a/stylesheets/styles.css
+++ b/stylesheets/styles.css
@@ -1,62 +1,78 @@
-
-
-.navbar {
-  font-family: 'Roboto', sans-serif;
-  font-size: larger;  
+nav {
+  float: left;
+}
+  
+nav div ol li a {
   color: black;
-}
-
-.nav-link {
-    color: black;
-}
-
-.black {
-    color: black;
-}
-
-/* Remove numbering for list items */
-ol li {
-    list-style-type: none;
+  font-size: larger;
+  font-family: 'Roboto', sans-serif;
 }
 
 .name {
-    position: relative;
-    width: 300px;
-    height: 200px;
-    top: 50vh;
-    left: 50vw;
-    text-align: center;
-    font-size: 400%;
-    color: black;
-    font-family: 'Major Mono Display', monospace;
-    background-color: white;
-    margin: -100px 0 0 -150px;
-  }
- 
-.content {
-    font-family: 'Roboto', sans-serif;
-    margin-top: 20vh;
-    margin-left: 4vw;
-    font-size: 20px;
+  width: 300px;
+  height: 200px;
+  text-align: center;
+  font-size: 400%;
+  color: black;
+  font-family: 'Major Mono Display', monospace;
+  background-color: white;
 }
- 
-  @media only screen and (min-width: 600px) {  
-    .name {
-        position: absolute;
-        width: 300px;
-        height: 200px;
-        top: 50%;
-        left: 50%;
-        text-align: center;
-        font-size: 400%;
-        color: black;
-        font-family: 'Major Mono Display', monospace;
-        background-color: white;
-        margin: -100px 0 0 -150px;
-      }
 
+.content {
+  font-family: 'Roboto', sans-serif;
+  margin-top: 5vh;
+  margin-left: 2vw;
+  margin-right: 1vw;
+  font-size: 20px;
 }
-footer {
-    position: absolute;
-    bottom: 0;
+
+.footer {
+  float: left;
+  clear: both;
+  width: 100%;
+  margin-top: 10vh;
+  overflow: hidden;
 }
+
+.footer ol li {
+  float: right;
+  margin: 5px;
+  list-style-type: none;
+}
+
+  /* Style all font awesome icons */
+  .fa-socials {
+    padding: 20px;
+    margin: 10px;
+    font-size: 100px;
+    width: 50px;
+    height: 50px;
+    text-align: center;
+    background: black;
+    color: white;
+  }
+
+@media only screen and (min-width: 600px) {    
+
+  svg {
+    float: left;
+    clear: both;
+  }
+       
+  .content {
+    float: left;
+    clear: both;
+  }
+  
+  .name {
+    float: left;
+    clear: both;
+    margin-left: 40vw;
+  }
+    
+  .footer {
+    margin-top: 30vh;
+  }
+}
+
+
