--- a/views/layout.pug
+++ b/views/layout.pug
@@ -8,13 +8,14 @@ head
   // bootstrap
   link(href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" rel='stylesheet')
   link(href='https://maxcdn.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css' rel='stylesheet')
+  link(href='https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css' rel='stylesheet')
   script(src='https://code.jquery.com/jquery-3.3.1.min.js')
   link(href='https://fonts.googleapis.com/css2?family=Major+Mono+Display&display=swap' rel='stylesheet')
   link(href="https://fonts.googleapis.com/css2?family=Roboto:wght@900&display=swap" rel="stylesheet")
   script(src='https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js')
   script(src='https://maxcdn.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js')
   script(src='https://d3js.org/d3.v4.min.js')
-  
+
   title Kareem: #{title}
 body
   nav.navbar.navbar-expand-lg
@@ -35,3 +36,11 @@ body
     circle(cx='60px' cy='100px' r='25px')
     rect(x='120px' y='75px' height='50px' width='50px')
   block main
+  div.footer
+    ol
+      li
+        a.fa.fa-socials.fa-twitter(href='https://twitter.com/KareemAAbuzaid')
+      li
+        a.fa.fa-socials.fa-github(href='https://github.com/KareemAbuzaid')
+      li
+        a.fa.fa-socials.fa-linkedin(href='https://linkedin.com/in/kareemabuzaid')
