--- a/stylesheets/styles.css
+++ b/stylesheets/styles.css
@@ -17,24 +17,24 @@ nav div ol li a {
   font-family: 'Major Mono Display', monospace;
   background-color: white;
   display: relative;
-  margin-right: auto;
-  margin-left: auto;
+  margin-top: 10vh;  
+  clear: both;
+  margin: 0 auto 0 auto;
 }
 
 .content {
   font-family: 'Roboto', sans-serif;
-  margin-top: 5vh;
-  margin-left: 2vw;
-  margin-right: 1vw;
-  font-size: 20px;
-}
-
-.footer {
   float: left;
   clear: both;
-  width: 100%;
+  font-size: 20px;
+  margin: 5vh 2vw 0vh 2vw;
+}
+
+.page-footer {
+  display: relative;
+  float: right;
   margin-top: 10vh;
-  overflow: hidden;
+  clear: both;
 }
 
 .footer ol li {
@@ -47,7 +47,7 @@ nav div ol li a {
   .fa-socials {
     padding: 20px;
     margin: 10px;
-    font-size: 100px;
+    font-size: 36px;
     width: 50px;
     height: 50px;
     text-align: center;
@@ -55,27 +55,5 @@ nav div ol li a {
     color: white;
   }
 
-@media only screen and (min-width: 600px) {    
-
-  svg {
-    float: left;
-    clear: both;
-  }
-       
-  .content {
-    float: left;
-    clear: both;
-  }
-  
-  .name {
-    float: left;
-    clear: both;
-    margin-left: 40vw;
-  }
-    
-  .footer {
-    margin-top: 30vh;
-  }
-}
 
 
