--- a/views/layout.pug
+++ b/views/layout.pug
@@ -32,15 +32,13 @@ body
           a.nav-link(href='/') PROJECTS
         li.nav-item
           a.nav-link(href='/contact') CONTACT
-  svg      
-    circle(cx='60px' cy='100px' r='25px')
-    rect(x='120px' y='75px' height='50px' width='50px')
   block main
-  div.footer
-    ol
-      li
-        a.fa.fa-socials.fa-twitter(href='https://twitter.com/KareemAAbuzaid')
-      li
-        a.fa.fa-socials.fa-github(href='https://github.com/KareemAbuzaid')
-      li
-        a.fa.fa-socials.fa-linkedin(href='https://linkedin.com/in/kareemabuzaid')
+  footer.page-footer
+    div.footer
+      ol
+        li
+          a.fa.fa-socials.fa-twitter(href='https://twitter.com/KareemAAbuzaid')
+        li
+          a.fa.fa-socials.fa-github(href='https://github.com/KareemAbuzaid')
+        li
+          a.fa.fa-socials.fa-linkedin(href='https://linkedin.com/in/kareemabuzaid')
