[ADD] change homepage and phone number

--- a/stylesheets/styles.css
+++ b/stylesheets/styles.css
@@ -14,7 +14,7 @@ nav div ol li a {
   text-align: center;
   font-size: 400%;
   color: black;
-  font-family: 'Major Mono Display', monospace;
+  font-family: 'Roboto', sans-serif;
   background-color: white;
   display: relative;
   margin-top: 10vh;  
