add to the about page

--- a/views/about.pug
+++ b/views/about.pug
@@ -3,5 +3,6 @@ block main
   div.content
     p I started my journey with software in 2018. I started learning mainly for work but bit by bit learning to code has become an essential part of my day. I started wrong, trying to learn a web framework before learning the basics. I eventually figured out that learning to code is a process in which you build layers upon layers, the foundation needs to be sturdy.
     p I graduated at the German University in Cairo, with a bachelor’s degree in networks engineering and technology, and worked for several years at a global network provider before finding my passion.
-    p I enjoy learning, and wish to retain the student mindset for as long as I can. I also believe that science has the answers.
+    p I enjoy learning, and wish to retain the student mindset for as long as I can.
+    p I am currently independent, doing contracting, freelancing, and consulting.
     p Minimalist.
