change socials look

--- a/stylesheets/styles.css
+++ b/stylesheets/styles.css
@@ -51,8 +51,8 @@ nav div ol li a {
     width: 50px;
     height: 50px;
     text-align: center;
-    background: black;
-    color: white;
+    background: white;
+    color: black;
   }
 
 
