[FIX]: change spelling of Aisha to Aicha

--- a/views/about.pug
+++ b/views/about.pug
@@ -6,7 +6,7 @@ block main
     br
     div(style='overflow: auto;')
       img(src='/images/naguib_1.png' alt='Naguib Mahfouz' style=' width: 340px; margin-left: 30px; float: right;')
-      p I enjoy Arabic literature, one of my all time favorites is The Cairo Trilogy by Egyptian novelist and the 1988 Nobel prize winner Naguib Mahfouz. The main protagonist in the novel is Elsayed Ahmed Abdelgawad(known as Sy Elsayed in Arab pop culture.) His daughter Aisha's husband and children die due to Cholera, a pandemic that hit the world between 1922 and 1927. 180,000 Egyptians died in that pandemic. I remember reading that part of the novel on the first evening of COVID-19 lockdown in Cairo. It was such a moving tale. I started freelancing with software just about that same time.
+      p I enjoy Arabic literature, one of my all time favorites is The Cairo Trilogy by Egyptian novelist and the 1988 Nobel prize winner Naguib Mahfouz. The main protagonist in the novel is Elsayed Ahmed Abdelgawad(known as Sy Elsayed in Arab pop culture.) His daughter Aicha's husband and children die due to Cholera, a pandemic that hit the world between 1922 and 1927. 180,000 Egyptians died in that pandemic. I remember reading that part of the novel on the first evening of COVID-19 lockdown in Cairo. It was such a moving tale. I started freelancing with software just about that same time.
       img(src='/images/naguib_2.png' alt='Naguib Mahfouz' width='200px')
       img(src='/images/sy_elsayed_1.png' alt='Sy Elsayed' width='200px' style='margin-left: 80px;')
       img(src='/images/sy_elsayed_2.png' alt='Sy Elsayed' width='200px' style='margin-left: 80px;')
